--- a/index.html
+++ b/index.html
@@ -131,23 +131,23 @@
 	</div>
 
 	<h1>Who?</h1>
-	<p>&ldquo;Legally Blind&rdquo; Chris Moore ("LBC") is a godless socialist intent on seizing the means of production, radically redistributing wealth and the betterment of all peoples lives at the expense of the ruling class. Intent on easing the pressures of inequity through addressing the ills of society by addressing the very issues that cause these issues, through robust policies and social-welfare initiatives that will ensure people's needs are met, so that crime and want become the rarest of our problems.</p>
-	<p>Chris, a disabled and poor worker/ artist believes these are easily attained goals if the wealthy are fairly taxed, (as in peoples lives at the expense of the ruling class. Intent on easing the pressures of inequity through addressing the ills of society by addressing the very issues that cause these issues, through robust policies and social-welfare initiatives that will ensure people's needs are met, so that crime and want become the rarest of our problems. Chris, a disabled and poor worker/ artist believes these are easily attained goals if the wealthy are fairly taxed, (as in previous generations) and the resources are properly directed.</p>
+	<p>&ldquo;Legally Blind&rdquo; Chris Moore ("LBC") is a godless socialist running for The Donner Party. (EAT THE RICH.) Chris is intent on seizing the means of production, radically redistributing wealth and the betterment of all peoples lives at the expense of the ruling class. Intent on easing inequity through addressing the ills of society with a focus on the very issues that cause these maladies, with robust policies and social-welfare initiatives that will ensure people's needs are met, so that crime and want become the rarest of our problems.</p>
+	<p>Chris, a disabled and poor worker/artist believes these are easily attained goals if the wealthy are fairly taxed (as in previous generations) and peoples lives are put above corporate profits. No one should have to suffer at the expense of the ruling class.</p>
 	
 	<p><em>“This ain't rocket science.”</em></p>
 
-	<p>Chris has lived in San Francisco off and on for almost 20 years. Drawn here by the books of Hunter S. Thompson and the legends of the Tenderloin; brought up on the Dead Kennedys brand of politics and stories of the Mitchell Brothers’s counterculture. Chris has been a sex worker, bartender, dog walker, Barbary Coast history enthusiast and all around weirdo.
+	<p>Chris has lived in San Francisco off and on for almost 20 years. He was drawn here by the books of Mark Twain and Hunter S Thompson, lured by tales of vice and virtue, played out in the streets of the  legendary tenderloin. Brought up on the dead Kennedys brand of politics and stories of the Mitchell Brothers’s counterculture. He&rsquo; been a sex worker, bartender, dog walker, Barbary coast history enthusiast and all around weirdo.</p>
 
 	<h1>Platform</h1>
 	<h2>---HOUSING---</h2>
 	<ul>
-		<li>Open the Office of Sustainable Development and Recovery.</li>
 		<li>Legalize squatting in any building left vacant.</li>
 		<li>Re-zone and convert offices into low income housing with support services.</li>
 	</ul>
 
 	<h2>---CLIMATE---</h2>
 	<ul>
+		<li>Open the Office of Sustainable Development and Recovery to address climate change and the challenges ALL of humanity will face. (If we don’t stop man made climate change, no policy will make a difference. “There is no planet B!”</li>
 		<li>Divest city pension funds from all fossil fuels and reinvest them in renewable energy.</li>
 	</ul>
 
@@ -158,7 +158,7 @@
 
 	<h2>---HEALTH &amp; WELLNESS---</h2>
 	<ul>
-		<li>Open a hospital/home for the criminally mentally ill.</li>
+		<li>Open a hospital/home for the mentally ill.</li>
 		<li>Build public bathrooms everywhere.</li>
 		<li>Build a bench on every city block.</li>
 		<li>Expand Healthy SF to all city residents.</li>
@@ -182,7 +182,7 @@
 	<ul>
 		<li>Billionaire tax: Marginal tax rate of 100% on incomes over $999,999,999.</li>
 		<li>Mandate repayment of all tax breaks given to the big tech companies that failed to clean up Mid-market.</li>
-		<li>$10k fine for texting in Teslas, Rivians and other luxury vehicles.</li>
+		<li>$10k fine for double parking or texting in Teslas, Rivians and other luxury vehicles.</li>
 	</ul>
 
 	<h1>Get Chris on the ballot</h1>
