--- a/index.html
+++ b/index.html
@@ -195,5 +195,5 @@
 	</div>
 
 	<h2 id="donate">---DONATE---</h2>
-	<p>We&rsquo;re working to set up online donations. In the meantime, if you find Chris offline, pitch him a few bucks.</p>
+	<p>We&rsquo;re working to set up online donations. In the meantime, if you see Chris, pitch him a few bucks.</p>
 </body>
