--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			align-items: center;
 			justify-content: center;
 			max-width: 100vw;
-			padding: 16px;
+			padding: 8px;
 		}
 
 		body > * { max-width: 560px }
@@ -38,7 +38,9 @@
 			font-size: 128px;
 			line-height: 1em;
 			text-transform: uppercase;
-			text-align: center; }
+			text-align: center;
+			margin: 16px 0; 
+		}
 
 		.hero {
 			position: relative;
@@ -81,6 +83,7 @@
 		h2 {
 			color: #ccc;
 			text-align: center;
+			margin: 32px 0 0 0;
 		}
 
 		img {
@@ -91,6 +94,7 @@
 			width: 100%;
 			display: flex;
 			gap: 16px;
+			margin: 24px 0;
 		}
 
 		.button {
@@ -100,6 +104,9 @@
 			border-radius: 4px;
 			width: 100%;
 			font-weight: 600;
+			display: flex;
+			align-items: center;
+    		justify-content: center;
 		}
 
 			.primary {
@@ -111,6 +118,10 @@
 				border: 2px solid white;
 				color: white;
 			}
+
+		@media only screen and (max-width: 499px) {
+		  h1 { font-size: 80px; }
+		}
 	</style>
 </head>
 <body>
