--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 			font-family: "League Gothic", sans-serif;
 			font-size: 128px;
 			line-height: 1em;
+			letter-spacing: -0.01em;
 			text-transform: uppercase;
 			text-align: center;
 			margin: 16px 0; 
