--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 			color: #ccc;
 			text-align: center;
 			margin: 32px 0 0 0;
+			text-wrap: balance;
 		}
 
 		img {
@@ -151,24 +152,24 @@
 	<p>Chris has lived in San Francisco off and on for almost 20 years. He was drawn here by the books of Mark Twain and Hunter S Thompson, lured by tales of vice and virtue, played out in the streets of the  legendary tenderloin. Brought up on the dead Kennedys brand of politics and stories of the Mitchell Brothers’s counterculture. He&rsquo; been a sex worker, bartender, dog walker, Barbary coast history enthusiast and all around weirdo.</p>
 
 	<h1>Platform</h1>
-	<h2>---HOUSING---</h2>
+	<h2>HOUSING</h2>
 	<ul>
 		<li>Legalize squatting in any building left vacant.</li>
 		<li>Re-zone and convert offices into low income housing with support services.</li>
 	</ul>
 
-	<h2>---CLIMATE---</h2>
+	<h2>CLIMATE</h2>
 	<ul>
 		<li>Open the Office of Sustainable Development and Recovery to address climate change and the challenges ALL of humanity will face. (If we don’t stop man made climate change, no policy will make a difference. “There is no planet B!”</li>
 		<li>Divest city pension funds from all fossil fuels and reinvest them in renewable energy.</li>
 	</ul>
 
-	<h2>---EDUCATION---</h2>
+	<h2>EDUCATION</h2>
 	<ul>
 		<li>Open the Nancy Pelosi School of Ethical Insider Trading so our kids can learn the ins and outs of risk-free day trading from the best.</li>
 	</ul>
 
-	<h2>---HEALTH &amp; WELLNESS---</h2>
+	<h2>HEALTH &amp; WELLNESS</h2>
 	<ul>
 		<li>Open a hospital/home for the mentally ill.</li>
 		<li>Build public bathrooms everywhere.</li>
@@ -176,21 +177,21 @@
 		<li>Expand Healthy SF to all city residents.</li>
 	</ul>
 
-	<h2>---TRANSPORTATION &amp; INFRASTRUCTURE---</h2>
+	<h2>TRANSPORTATION &amp; INFRASTRUCTURE</h2>
 	<ul>
 		<li>Ban all cars from the city limits.</li>
 		<li>Boost investment in public transit using money from the Billionaire tax.</li>
 		<li>Free city bike share.</li>
 	</ul>
 
-	<h2>---PUBLIC SAFETY &amp; QUALITY OF LIFE---</h2>
+	<h2>PUBLIC SAFETY &amp; QUALITY OF LIFE</h2>
 	<ul>
 		<li>Legalize sex work.</li>
 		<li>Decriminalize graffiti.</li>
 		<li>Ban the Blue Angels.</li>
 	</ul>
 
-	<h2>---REVENUE---</h2>
+	<h2>REVENUE</h2>
 	<ul>
 		<li>Billionaire tax: Marginal tax rate of 100% on incomes over $999,999,999.</li>
 		<li>Mandate repayment of all tax breaks given to the big tech companies that failed to clean up Mid-market.</li>
@@ -200,12 +201,12 @@
 	<h1>Get Chris on the ballot</h1>
 	<p>It takes some combination of 14,040 signatures (valued at 50¢/signature) or $7,020 to get a Mayoral candidate on the ballot in San Francisco elections. Here’s how you can help:
 
-	<h2 id="sign">---SIGN A PETITION---</h2>
+	<h2 id="sign">SIGN A PETITION</h2>
 	<p>To sign a petition, find Chris at protests, skateparks and art gallaries around S.F. Follow him on Instagram for updates:</p>
 	<div class="button-group">
 		<a href="https://www.instagram.com/lurkout" class="button secondary">Follow @lurkout</a>
 	</div>
 
-	<h2 id="donate">---DONATE---</h2>
+	<h2 id="donate">DONATE</h2>
 	<p>We&rsquo;re working to set up online donations. In the meantime, if you see Chris, pitch him a few bucks.</p>
 </body>
