--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 	<p>It takes some combination of 14,040 signatures (valued at 50¢/signature) or $7,020 to get a Mayoral candidate on the ballot in San Francisco elections. Here’s how you can help:
 
 	<h2 id="sign">SIGN A PETITION</h2>
-	<p>To sign a petition, find Chris at protests, skateparks and art gallaries around S.F. Follow him on Instagram for updates:</p>
+	<p>To sign a petition, find Chris at protests, skateparks and art galleries around S.F. Follow him on Instagram for updates:</p>
 	<div class="button-group">
 		<a href="https://www.instagram.com/lurkout" class="button secondary">Follow @lurkout</a>
 	</div>
